--- a/style.css
+++ b/style.css
@@ -30,16 +30,68 @@
     overflow: scroll;
 }
 
-
-/* 
-.member__list {
-    display: flex;
-    flex-direction: column;
-} */
-.family__tree,
-.parent__list, 
-.child__list {
+.family__tree {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+}
+
+.family__tree,
+.parent__list, 
+.child__list
+ {
+    display: flex;
+    flex-direction: row;
+}
+
+div.family__branch {
+    border: 1px solid black;
+    padding: 8px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.parent {
+    background-color: red;
+}
+
+.child {
+    background-color: green;
+}
+
+.parent.child {
+    color: red;
+    border: 4px solid green;
+}
+
+.sibling {
+    background-color: orange;
+}
+
+.spouse {
+    background-color: yellow;
+}
+
+.spouses {
+    display: flex;
+}
+
+.spouses .profile_leaf:last-child {
+    margin-left: -32px;
+}
+
+.spouse.parent {
+    background-color: yellow;
+    border: 4px solid red;
+}
+
+
+.siblings_list {
+    display: flex;
+    flex-direction: row;
+}
+
+.descendants {
+    display: flex;
+    flex-direction: row;
 }
