--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,47 +1,52 @@
 body {
-  font-family: "Lato", san-serif; }
+  font-family: 'Lato', san-serif;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden; }
+
+img {
+  max-width: 100%; }
 
 .directMembers,
 .descendants,
 .familyTree,
-.profile_leaf {
+.profileLeaf,
+.contentContainer {
   display: flex; }
 
 .familyTree {
+  width: 100%;
   padding: 16px;
-  justify-content: center; }
+  justify-content: center;
+  max-height: calc(100vh - 80px); }
 
 .directMembers {
   justify-content: center; }
 
-.profile_leaf {
-  z-index: 2;
+.profileLeaf {
+  cursor: pointer;
+  z-index: 3;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   width: 160px;
   height: 160px;
   font-size: 16px;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15), 0 1px 24px rgba(0, 0, 0, 0.1), 0 0 0 8px white inset;
-  border-radius: 1000px;
   text-align: center;
   margin: 32px;
-  background-color: #f3f3f3;
   position: relative;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
   background-image: url("https://images.pexels.com/photos/614810/pexels-photo-614810.jpeg?cs=srgb&dl=face-facial-hair-fine-looking-guy-614810.jpg&fm=jpg");
   animation: bounceIn .5s ease-in-out;
-  transform-origin: center; }
-  .profile_leaf.you .name_plate {
-    font-weight: 900; }
-  .profile_leaf.spouse {
-    z-index: 1;
-    margin-left: -48px; }
-  .profile_leaf .name_plate {
+  transform-origin: center;
+  border-radius: 1000px; }
+  .profileLeaf:hover {
+    z-index: 999; }
+  .profileLeaf__caption {
     position: absolute;
-    top: 136px;
+    bottom: -12px;
     box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
     padding: 8px 12px;
     background-color: white;
@@ -50,24 +55,74 @@ body {
     margin: 0 auto;
     display: flex;
     align-items: center;
-    white-space: nowrap; }
-    .profile_leaf .name_plate i {
-      margin-left: 8px; }
+    white-space: nowrap;
+    z-index: 4; }
+  .profileLeaf__name {
+    width: 100%; }
+  .profileLeaf.you .profileLeaf__caption {
+    font-weight: 900; }
+  .profileLeaf.claimed {
+    border: 1px solid cyan; }
+  .profileLeaf.selected {
+    transform: scale3d(1.1, 1.1, 1.1);
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15), 0 1px 24px rgba(0, 0, 0, 0.1), 0 0 0 8px blue inset; }
+  .profileLeaf.spouse {
+    z-index: 1;
+    margin-left: -48px; }
+  .profileLeaf__connectors {
+    position: absolute;
+    z-index: 1;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none; }
+    .profileLeaf__connectors:before, .profileLeaf__connectors:after {
+      z-index: 1;
+      content: "";
+      position: absolute;
+      background-color: #d9d9d9; }
+    .profileLeaf__connectors:before {
+      height: 32px;
+      width: 1px;
+      bottom: -32px; }
+    .profileLeaf__connectors:after {
+      width: 224px;
+      height: 1px;
+      bottom: -32px; }
+    .familyTree > .branch > .descendants .branch .profileLeaf__connectors:before {
+      top: -32px; }
+    .familyTree > .branch > .descendants .branch .profileLeaf__connectors:after {
+      width: 224px;
+      height: 1px;
+      top: -32px; }
+    .descendants .branch:last-child .profileLeaf__connectors:after {
+      content: none; }
 
 .treeName {
   margin-right: 80px; }
 
-.branch .branch {
-  border-top: 1px solid #d9d9d9; }
-
 .actions {
   position: absolute;
-  right: -12px; }
-  .actions button {
-    border-radius: 40px;
+  top: 0;
+  right: 0; }
+  .actions .actions_dropdown {
+    display: none;
+    position: absolute;
     background-color: white;
-    padding: 4px;
-    height: 32px; }
+    padding: 8px;
+    min-width: 120px;
+    border-radius: 8px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); }
+    .actions .actions_dropdown.show {
+      display: block; }
+    .actions .actions_dropdown > * {
+      text-align: left; }
+      .actions .actions_dropdown > *:hover {
+        background-color: rgba(0, 0, 0, 0.05);
+        cursor: pointer; }
 
 [data-menu-for="actions_add_member"] {
   position: absolute;
@@ -93,7 +148,8 @@ nav {
   background-color: white;
   color: gray;
   z-index: 9999;
-  align-items: center; }
+  align-items: center;
+  height: 80px; }
 
 .add-member-menu {
   background-color: white;
@@ -109,6 +165,49 @@ nav {
     .add-member-menu li:hover {
       background-color: rgba(0, 0, 0, 0.05);
       cursor: pointer; }
+
+.contentContainer {
+  flex: 1;
+  position: relative;
+  max-height: calc(100vh - 80px); }
+
+.profileInfo {
+  position: fixed;
+  bottom: 0;
+  top: 80px;
+  right: 0;
+  z-index: 99;
+  width: 100%;
+  max-width: 440px;
+  transform: translateX(100%);
+  padding: 24px;
+  transition: transform .2s ease-in-out; }
+  .profileInfo__container {
+    border-radius: 16px;
+    background-color: white;
+    box-shadow: 0px 4px 32px rgba(0, 0, 0, 0.16), 0px 2px 4px rgba(0, 0, 0, 0.16);
+    height: 100%;
+    position: relative; }
+  .profileInfo__name {
+    padding: 24px;
+    font-size: 18px; }
+  .profileInfo__close {
+    width: 44px;
+    height: 44px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 100px;
+    position: absolute;
+    top: 12px;
+    right: 24px;
+    border: none;
+    cursor: pointer;
+    font-size: 18px; }
+  .profileInfo form {
+    padding: 24px; }
+  .profileInfo.show {
+    transform: translateX(0%); }
 
 @keyframes fadeIn {
   from {
