--- a/scss/index.scss
+++ b/scss/index.scss
@@ -1,21 +1,36 @@
 $profileLeafSize: 160px;
 $leafSpacing: 32px;
 $lineColor: lighten(gray, 35%);
+$navHeight: 80px;
+$maxWidthProfileInfo: 440px;
+$borderWidth: 8px;
+$leafCaptionOffset: 12px;
+$lineExtension: 24px;
 
 body {
-    font-family: 'Lato', san-serif
+    font-family: 'Lato', san-serif;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+}
+
+img {
+    max-width: 100%;
 }
 
 .directMembers,
 .descendants,
 .familyTree,
-.profile_leaf {
+.profileLeaf,
+.contentContainer {
     display: flex;
 }
 
 .familyTree {
+    width: 100%;
     padding: 16px;
     justify-content: center;
+    max-height: calc(100vh - #{$navHeight});
 }
 
 .directMembers {
@@ -26,21 +41,17 @@ body {
     // Nothing
 }
 
-.profile_leaf {
-    z-index: 2;
+.profileLeaf {
+    cursor: pointer;
+    z-index: 3;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     width: $profileLeafSize;
     height: $profileLeafSize;
     font-size: 16px;
-    box-shadow: 0 4px 10px rgba(0,0,0,.15),
-                0 1px 24px rgba(0,0,0,.1),
-                0 0 0 8px white inset;
-    border-radius: 1000px;
     text-align: center;
     margin: $leafSpacing;
-    background-color: lighten(gray, 45%);
     position: relative;
     background-repeat: no-repeat;
     background-size: cover;
@@ -48,21 +59,15 @@ body {
     background-image: url("https://images.pexels.com/photos/614810/pexels-photo-614810.jpeg?cs=srgb&dl=face-facial-hair-fine-looking-guy-614810.jpg&fm=jpg");
     animation: bounceIn .5s ease-in-out;
     transform-origin: center;
+    border-radius: 1000px;
 
-    &.you {
-        .name_plate {
-            font-weight: 900;
-        }
+    &:hover {
+        z-index: 999;
     }
 
-    &.spouse {
-        z-index: 1;
-        margin-left: -$leafSpacing - 16px;
-    }
-
-    .name_plate {
+    &__caption {
         position: absolute;
-        top: $profileLeafSize - 24px;
+        bottom: -$leafCaptionOffset;
         box-shadow: 0 1px 4px rgba(0,0,0,.2);
         padding: 8px 12px;
         background-color: white;
@@ -72,9 +77,82 @@ body {
         display: flex;
         align-items: center;
         white-space: nowrap;
+        z-index: 4;
+    }
 
-        i {
-            margin-left: 8px;
+    &__name {
+        width: 100%;
+    }
+
+    &.you {
+        .profileLeaf__caption {
+            font-weight: 900;
+        }
+    }
+
+    &.claimed {
+        border: 1px solid cyan;
+    }
+
+    &.selected {
+        transform: scale3d(1.1,1.1,1.1);
+        box-shadow: 0 4px 10px rgba(0,0,0,.15),
+                    0 1px 24px rgba(0,0,0,.1),
+                    0 0 0 8px blue inset;
+    }
+
+    &.spouse {
+        z-index: 1;
+        margin-left: -$leafSpacing - 16px;
+    }
+
+    &__connectors {
+        position: absolute;
+        z-index: 1;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        pointer-events: none;
+
+        &:before,
+        &:after {
+            z-index: 1;
+            content: "";
+            position: absolute;
+            background-color: $lineColor;
+        }
+
+        &:before {
+            height: $leafSpacing;
+            width: 1px;
+            bottom: -$leafSpacing;
+        }
+
+        &:after {
+            width: $profileLeafSize + $leafSpacing*2;
+            height: 1px;
+            bottom: -$leafSpacing;
+        }
+
+        .familyTree > .branch > .descendants .branch & {
+            &:before {
+                top: -$leafSpacing;
+            }
+    
+            &:after {
+                width: $profileLeafSize + $leafSpacing*2;
+                height: 1px;
+                top: -$leafSpacing;
+            }
+        }
+
+        .descendants .branch:last-child & {
+            &:after {
+                content: none;
+            }
         }
     }
 }
@@ -101,19 +179,36 @@ body {
     // }
 
     .branch {
-        border-top: 1px solid $lineColor;
+        // border-top: 1px solid $lineColor;
     }
 }
 
 .actions {
     position: absolute;
-    right: -12px;
+    top: 0;
+    right: 0;
 
-    button {
-        border-radius: 40px;
+    .actions_dropdown {
+        display: none;
+        position: absolute;
         background-color: white;
-        padding: 4px;
-        height: 32px;
+        padding: 8px;
+        min-width: 120px;
+        border-radius: 8px;
+        box-shadow: 0 2px 10px rgba(black, .1);
+
+        &.show {
+            display: block;
+        }
+
+        > * {
+            text-align: left;
+
+            &:hover {
+                background-color: rgba(black, .05);
+                cursor: pointer;
+            }
+        }
     }
 
 }
@@ -146,6 +241,7 @@ nav {
     color: gray;
     z-index: 9999;
     align-items: center;
+    height: $navHeight;
 }
 
 .add-member-menu {
@@ -168,6 +264,62 @@ nav {
     }
 }
 
+.contentContainer {
+    flex: 1;
+    position: relative;
+    max-height: calc(100vh - #{$navHeight});
+}
+
+.profileInfo {
+    position: fixed;
+    bottom: 0;
+    top: $navHeight;
+    right: 0;
+    z-index: 99;
+    width: 100%;
+    max-width: $maxWidthProfileInfo;
+    transform: translateX(100%);
+    padding: 24px;
+    transition: transform .2s ease-in-out; 
+
+    &__container {
+        border-radius: 16px;
+        background-color: white;
+        box-shadow: 0px 4px 32px rgba(black, 0.16),
+        0px 2px 4px rgba(black, 0.16);
+        height: 100%;
+        position: relative;
+    }
+
+    &__name {
+        padding: 24px;
+        font-size: 18px;
+    }
+
+    &__close {
+        width: 44px;
+        height: 44px;
+        display: flex;
+        justify-content: center;
+        align-items: center; 
+        border-radius: 100px;
+        position: absolute;
+        top: 12px;
+        right: 24px;
+        border: none;
+        cursor: pointer;
+        font-size: 18px;
+    }
+
+    form {
+        padding: 24px;
+    }
+
+    &.show {
+        transform: translateX(0%);
+    }
+}
+
 @keyframes fadeIn {
     from {
         opacity: 0;
@@ -185,3 +337,7 @@ nav {
     80% { transform: scale(.98); }
     100% { transform: scale(1); }
   }
+
+
+  // if you are in a descendants container, the line should go all the way through
+  // If not the line just comes down. 
