--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,9 +3,22 @@ body {
   display: flex;
   flex-direction: column; }
 
+ul {
+  margin: 0;
+  padding: 0; }
+
 img {
   max-width: 100%;
   background-color: #FDD3A6; }
+
+.modal {
+  position: fixed;
+  top: 35%;
+  max-width: 500px;
+  margin: 0 auto;
+  border-radius: 16px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+  padding: 24px; }
 
 .directMembers,
 .descendants,
@@ -21,6 +34,8 @@ img {
   max-height: calc(100vh - 80px); }
   .familyTree > .branch + .branch {
     margin-left: 160px; }
+  .familyTree:empty {
+    display: none; }
   .familyTree.list {
     justify-content: left;
     display: initial; }
@@ -59,7 +74,8 @@ img {
   margin: 32px;
   position: relative;
   animation: bounceIn .5s ease-in-out;
-  transform-origin: center; }
+  transform-origin: center;
+  transition: all .2s ease-in-out; }
   .profileLeaf:hover {
     z-index: 99; }
   .profileLeaf__image {
@@ -163,28 +179,38 @@ img {
   [data-menu-for="actions_add_member"].show {
     display: block; }
 
-.viewPref--list,
-.viewPref--tree {
-  position: absolute;
+.iconButton {
+  width: 44px;
+  height: 44px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin: 0 auto;
+  border-radius: 50%; }
+
+.viewPref {
+  position: fixed;
   bottom: 48px;
   right: 48px;
   z-index: 999; }
-
-.viewPref--tree {
-  right: 80px; }
+  .viewPref > * {
+    margin: 8px; }
 
 nav {
   padding: 16px;
   width: 100%;
-  position: absolute;
+  position: sticky;
   top: 0;
+  left: 0;
   box-shadow: none;
   display: flex;
   background-color: transparent;
   color: gray;
-  z-index: 9999;
+  z-index: 99;
   align-items: center;
-  height: 80px; }
+  height: 80px;
+  background: linear-gradient(#fff, #fff); }
 
 .add-member-menu {
   background-color: white;
@@ -209,31 +235,34 @@ nav {
     outline: none; }
 
 .profileInfo {
-  position: fixed;
   bottom: 0;
-  top: 80px;
+  top: 0;
   right: 0;
   z-index: 99;
-  width: 100%;
+  width: 0%;
   max-width: 440px;
   transform: translateX(100%);
-  padding: 24px;
-  transition: transform .2s ease-in-out; }
+  transition: all .2s ease-in-out;
+  height: 100%; }
   .profileInfo__container {
-    border-radius: 16px;
+    border-radius: 8px 0 0 8px;
     background-color: white;
     box-shadow: 0px 4px 32px rgba(0, 0, 0, 0.16), 0px 2px 4px rgba(0, 0, 0, 0.16);
     height: 100%;
     position: relative;
-    overflow: scroll; }
-  .profileInfo__name {
+    overflow: scroll;
+    max-height: 100vh; }
+  .profileInfo__header {
     padding: 24px;
-    font-size: 18px;
     position: sticky;
-    top: 0;
-    background-color: white;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-    z-index: 2; }
+    background-color: white;
+    z-index: 2;
+    top: 0; }
+  .profileInfo__body {
+    padding: 48px; }
+  .profileInfo__name {
+    font-size: 18px; }
   .profileInfo__close {
     width: 44px;
     height: 44px;
@@ -283,10 +312,12 @@ nav {
     height: 100%;
     width: 100%;
     cursor: pointer; }
-  .profileInfo form {
-    padding: 24px; }
+  .profileInfo__item {
+    height: 3rem;
+    margin-bottom: 8px; }
   .profileInfo.show {
-    transform: translateX(0%); }
+    transform: translateX(0%);
+    width: 100%; }
 
 @keyframes fadeIn {
   from {
