--- a/scss/index.scss
+++ b/scss/index.scss
@@ -14,9 +14,24 @@ body {
     // overflow: hidden;
 }
 
+ul {
+    margin: 0;
+    padding: 0;
+}
+
 img {
     max-width: 100%;
     background-color: #FDD3A6;
+}
+
+.modal {
+    position: fixed;
+    top: 35%;
+    max-width: 500px;
+    margin: 0 auto;
+    border-radius: 16px;
+    box-shadow: 0 4px 12px rgba(black, .2);
+    padding: 24px;
 }
 
 .directMembers,
@@ -38,6 +53,11 @@ img {
         margin-left: $profileLeafSize;
     }
 
+    &:empty {
+        display: none;
+    }
+
+    
     &.list {
         justify-content: left;
         display: initial;
@@ -94,6 +114,7 @@ img {
     position: relative;
     animation: bounceIn .5s ease-in-out;
     transform-origin: center;
+    transition: all .2s ease-in-out;
 
     &:hover {
         z-index: 99;
@@ -277,30 +298,42 @@ img {
     }
 }
 
-.viewPref--list,
-.viewPref--tree {
-    position: absolute;
+.iconButton {
+    width: 44px;
+    height: 44px;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin: 0 auto;
+    border-radius: 50%;
+}
+
+.viewPref {
+    position: fixed;
     bottom: 48px;
     right: 48px;
     z-index: 999;
-}
-
-.viewPref--tree  {
-    right: 80px;
+    
+    > * {
+        margin: 8px;
+    }
 }
 
 nav {
     padding: 16px;
     width: 100%;
-    position: absolute;
+    position: sticky;
     top: 0;
+    left: 0;
     box-shadow: none;
     display: flex;
     background-color: transparent;
     color: gray;
-    z-index: 9999;
+    z-index: 99;
     align-items: center;
     height: $navHeight;
+    background: linear-gradient(#fff, #fff);
 }
 
 .add-member-menu {
@@ -334,35 +367,42 @@ nav {
 }
 
 .profileInfo {
-    position: fixed;
     bottom: 0;
-    top: $navHeight;
+    top:0;
     right: 0;
     z-index: 99;
-    width: 100%;
+    width: 0%;
     max-width: $maxWidthProfileInfo;
     transform: translateX(100%);
-    padding: 24px;
-    transition: transform .2s ease-in-out; 
+    transition: all .2s ease-in-out; 
+    height: 100%;
 
     &__container {
-        border-radius: 16px;
+        border-radius: 8px 0 0 8px;
         background-color: white;
         box-shadow: 0px 4px 32px rgba(black, 0.16),
         0px 2px 4px rgba(black, 0.16);
         height: 100%;
         position: relative;
         overflow: scroll;
+        max-height: 100vh;
+    }
+
+    &__header {
+        padding: 24px;
+        position: sticky;
+        box-shadow: 0 2px 8px rgba(0,0,0,.1);
+        background-color: white;
+        z-index: 2;
+        top: 0;
+    }
+
+    &__body {
+        padding: 48px;
     }
 
     &__name {
-        padding: 24px;
         font-size: 18px;
-        position: sticky;
-        top: 0;
-        background-color: white;
-        box-shadow: 0 2px 8px rgba(0,0,0,.1);
-        z-index: 2;
     }
 
     &__close {
@@ -424,13 +464,19 @@ nav {
         cursor: pointer;
     }
 
-    form {
-        padding: 24px;
+    &__item {
+        height: 3rem;
+        margin-bottom: 8px;
     }
 
     &.show {
         transform: translateX(0%);
+        width: 100%;
     }
+
+    // form {
+    //     display: none;
+    // }
 }
 
 @keyframes fadeIn {
@@ -450,7 +496,3 @@ nav {
     80% { transform: scale(.98); }
     100% { transform: scale(1); }
   }
-
-
-  // if you are in a descendants container, the line should go all the way through
-  // If not the line just comes down. 
