--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,30 +9,85 @@ ul {
   margin: 0;
   padding: 0; }
 
+.u-w_full {
+  width: 100%; }
+
+button,
+.button {
+  padding: 12px;
+  background-color: #333333;
+  border: 0px solid transparent;
+  font-size: 1rem;
+  border-radius: 8px;
+  color: white;
+  cursor: pointer;
+  text-decoration: none; }
+
+input {
+  padding: 0 8px;
+  margin-bottom: 1rem;
+  line-height: 3rem;
+  font-size: 1rem; }
+  input[disabled] {
+    opacity: .5; }
+
+input[type="text"],
+input[type="password"],
+input[type="email"],
+input[type="date"] {
+  width: 100%;
+  border-radius: 8px;
+  border: 1px solid #e5e5e5; }
+
+.checkbox-group {
+  display: flex; }
+
+fieldset {
+  padding: 0;
+  border: 0px solid transparent; }
+
 img {
   max-width: 100%;
   background-color: #FDD3A6; }
 
+.navigation {
+  position: absolute;
+  right: 24px;
+  top: 24px;
+  display: flex;
+  align-items: center; }
+  .navigation .userEmail {
+    margin-right: 16px; }
+
 .modal {
   position: fixed;
   top: 35%;
+  left: 50%;
+  right: 50%;
+  width: 100%;
   max-width: 500px;
   margin: 0 auto;
   border-radius: 16px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
-  padding: 24px; }
+  padding: 24px;
+  z-index: 9999;
+  background-color: white;
+  transform: translate(-50%, -50%); }
 
 .directMembers,
 .descendants,
 .familyTree,
 .profileLeaf,
 .contentContainer {
-  display: flex; }
+  display: flex;
+  justify-content: center; }
 
 .mainContent {
   flex: 1;
   position: relative;
-  height: 100vh; }
+  height: 100vh;
+  width: 100%;
+  min-width: 50%; }
 
 .familyTree {
   max-width: 100vw;
@@ -47,7 +102,8 @@ img {
     display: none; }
   .familyTree.list {
     justify-content: left;
-    display: initial;
+    display: flex;
+    flex-direction: column;
     transform-origin: left top; }
     .familyTree.list .directMembers,
     .familyTree.list .descendants,
@@ -106,7 +162,11 @@ img {
     min-width: 50%;
     margin: 0 auto;
     white-space: nowrap;
-    pointer-events: none; }
+    pointer-events: none;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    max-width: 72%;
+    overflow: hidden; }
   .profileLeaf__info {
     display: none; }
   .profileLeaf.you .profileLeaf__caption {
@@ -154,7 +214,14 @@ img {
 .treeName {
   margin: 0 auto;
   text-align: center;
-  width: 100%; }
+  max-width: 50ch;
+  font-weight: 900;
+  font-size: 1.25rem;
+  padding: 48px; }
+
+.disabled {
+  opacity: .5;
+  pointer-events: none; }
 
 .actions {
   position: absolute;
@@ -168,9 +235,12 @@ img {
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     z-index: 1;
-    text-align: left; }
+    text-align: left;
+    padding: 8px 0; }
     .actions .actions_dropdown.show {
       display: block; }
+    .actions .actions_dropdown:empty {
+      display: none; }
     .actions .actions_dropdown > [class*="option"],
     .actions .actions_dropdown [class*="action"] {
       padding: 8px 16px; }
@@ -247,7 +317,7 @@ nav {
 .contentContainer {
   flex: 1;
   position: relative;
-  max-height: calc(100vh - 80px); }
+  max-height: 100vh; }
   .contentContainer:focus {
     outline: none; }
 
@@ -277,7 +347,7 @@ nav {
     z-index: 2;
     top: 0; }
   .profileInfo__body {
-    padding: 48px; }
+    padding: 24px; }
   .profileInfo__name {
     font-size: 18px; }
   .profileInfo__close {
@@ -317,7 +387,9 @@ nav {
     cursor: pointer;
     font-size: 18px;
     z-index: 1;
-    background-color: rgba(255, 255, 255, 0.5); }
+    opacity: .5;
+    color: white;
+    mix-blend-mode: multiply; }
   .profileInfo__imageUpload {
     z-index: 2;
     position: absolute;
