--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21,7 +21,8 @@ button,
   border-radius: 8px;
   color: white;
   cursor: pointer;
-  text-decoration: none; }
+  text-decoration: none;
+  display: inline-block; }
 
 input {
   padding: 0 8px;
