--- a/public/css/style.css
+++ b/public/css/style.css
@@ -57,7 +57,8 @@ img {
   right: 24px;
   top: 24px;
   display: flex;
-  align-items: center; }
+  flex-direction: column;
+  align-items: flex-end; }
   .navigation .userEmail {
     margin-right: 16px; }
 
@@ -349,7 +350,7 @@ nav {
   right: 0;
   z-index: 99;
   width: 0%;
-  max-width: 440px;
+  max-width: 320px;
   transform: translateX(100%);
   transition: all .2s ease-in-out;
   height: 100%; }
