--- a/scss/index.scss
+++ b/scss/index.scss
@@ -2,7 +2,7 @@ $profileLeafSize: 160px;
 $leafSpacing: 32px;
 $lineColor: lighten(gray, 35%);
 $navHeight: 80px;
-$maxWidthProfileInfo: 440px;
+$maxWidthProfileInfo: 320px;
 $borderWidth: 8px;
 $leafCaptionOffset: 12px;
 $lineExtension: 24px;
@@ -77,7 +77,8 @@ img {
     right: 24px;
     top: 24px;
     display: flex;
-    align-items: center;
+    flex-direction: column;
+    align-items: flex-end;
 
     .userEmail {
         margin-right: 16px;
