--- a/public/css/style.css
+++ b/public/css/style.css
@@ -24,12 +24,14 @@ button,
   text-decoration: none;
   display: inline-block; }
 
-input {
+input,
+select {
   padding: 0 8px;
   margin-bottom: 1rem;
   line-height: 3rem;
-  font-size: 1rem; }
-  input[disabled] {
+  font-size: .875em; }
+  input[disabled],
+  select[disabled] {
     opacity: .5; }
 
 input[type="text"],
@@ -77,6 +79,11 @@ img {
   background-color: white;
   transform: translate(-50%, -50%); }
 
+#connectionLines {
+  position: absolute;
+  width: 100%;
+  height: 100%; }
+
 .directMembers,
 .descendants,
 .familyTree,
@@ -100,7 +107,7 @@ img {
   transition: transform .2s ease-in-out;
   transform-origin: center top; }
   .familyTree > .branch + .branch {
-    margin-left: 160px; }
+    margin-left: 120px; }
   .familyTree:empty {
     display: none; }
   .familyTree.list {
@@ -141,11 +148,11 @@ img {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 160px;
-  height: 160px;
-  font-size: 16px;
+  width: 120px;
+  height: 120px;
+  font-size: .875em;
   text-align: center;
-  margin: 32px;
+  margin: 24px;
   position: relative;
   animation: bounceIn .5s ease-in-out;
   transform-origin: center;
@@ -171,7 +178,7 @@ img {
     object-fit: cover;
     object-position: top;
     border-radius: 50%;
-    box-shadow: 0 0 0 8px white, 0 4px 12px 8px rgba(0, 0, 0, 0.15);
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
     pointer-events: none; }
   .profileLeaf__caption {
     position: absolute;
@@ -199,7 +206,7 @@ img {
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15), 0 1px 24px rgba(0, 0, 0, 0.1), 0 0 0 8px blue inset; }
   .profileLeaf.spouse {
     z-index: 1;
-    margin-left: -48px; }
+    margin-left: -40px; }
   .profileLeaf__connectors {
     position: absolute;
     z-index: 1;
@@ -216,35 +223,37 @@ img {
       position: absolute;
       background-color: #d9d9d9; }
     .profileLeaf__connectors:before {
-      height: 32px;
+      height: 24px;
       width: 1px;
-      bottom: -32px; }
+      bottom: -24px; }
     .profileLeaf__connectors:after {
-      width: 224px;
+      width: 168px;
       height: 1px;
-      bottom: -32px; }
+      bottom: -24px; }
     .familyTree > .branch > .descendants .branch .profileLeaf__connectors:before {
-      top: -32px; }
+      top: -24px; }
     .familyTree > .branch > .descendants .branch .profileLeaf__connectors:after {
-      width: 224px;
+      width: 168px;
       height: 1px;
-      top: -32px; }
+      top: -24px; }
     .descendants .branch:last-child .profileLeaf__connectors:after {
       content: none; }
 
 .treeName {
   margin: 0 auto;
   text-align: center;
-  max-width: 50ch;
   font-weight: 900;
   font-size: 1.25rem;
   padding: 48px; }
   .treeName a {
-    display: block; }
+    margin: 0 8px; }
 
 .disabled {
   opacity: .5;
   pointer-events: none; }
+
+.branch {
+  position: relative; }
 
 .actions {
   position: absolute;
@@ -350,7 +359,7 @@ nav {
   right: 0;
   z-index: 99;
   width: 0%;
-  max-width: 320px;
+  max-width: 352px;
   transform: translateX(100%);
   transition: all .2s ease-in-out;
   height: 100%; }
@@ -377,8 +386,6 @@ nav {
     background-color: white; }
   .profileInfo__body {
     padding: 24px; }
-  .profileInfo__name {
-    font-size: 18px; }
   .profileInfo__close, .profileInfo__edit {
     width: 44px;
     height: 44px;
@@ -435,7 +442,8 @@ nav {
     cursor: pointer; }
   .profileInfo__item {
     height: 3rem;
-    margin-bottom: 8px; }
+    margin-bottom: 8px;
+    font-size: .875em; }
   .profileInfo.show {
     transform: translateX(0%);
     width: 100%; }
