--- a/scss/index.scss
+++ b/scss/index.scss
@@ -1,8 +1,8 @@
-$profileLeafSize: 160px;
-$leafSpacing: 32px;
+$profileLeafSize: 120px;
+$leafSpacing: 24px;
 $lineColor: lighten(gray, 35%);
 $navHeight: 80px;
-$maxWidthProfileInfo: 320px;
+$maxWidthProfileInfo: 352px;
 $borderWidth: 8px;
 $leafCaptionOffset: 12px;
 $lineExtension: 24px;
@@ -38,11 +38,12 @@ button,
     display: inline-block;
 }
 
-input {
+input,
+select {
     padding: 0 8px;
     margin-bottom: 1rem;
     line-height: 3rem;
-    font-size: 1rem;
+    font-size: .875em;
 
     &[disabled] {
         opacity: .5;
@@ -99,6 +100,12 @@ img {
     z-index: 9999;
     background-color: white;
     transform: translate(-50%, -50%);
+}
+
+#connectionLines {
+    position: absolute;
+    width: 100%;
+    height: 100%;
 }
 
 .directMembers,
@@ -197,7 +204,7 @@ img {
     align-items: center;
     width: $profileLeafSize;
     height: $profileLeafSize;
-    font-size: 16px;
+    font-size: .875em;
     text-align: center;
     margin: $leafSpacing;
     position: relative;
@@ -222,7 +229,7 @@ img {
         object-fit: cover;
         object-position: top;
         border-radius: 50%;
-        box-shadow:  0 0 0 8px white, 0 4px 12px 8px rgba(0, 0, 0, 0.15);
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
         pointer-events: none;
     }
 
@@ -246,6 +253,37 @@ img {
     &__info {
         display: none;
     }
+
+    // &__connection {
+    //     position: absolute;
+    //     width: 100%;
+    //     height: 100%;
+    //     left: 0;
+    //     right: 0;
+    //     top: -12px;
+    //     bottom: 0;
+    //     z-index: -1;
+
+    //     &:before {
+    //         content: "";
+    //         position: absolute;
+    //         width: 1px;
+    //         height: calc(100% + (#{$leafSpacing} * 2));
+    //         top: -(#{$leafSpacing} - 8px);
+    //         background-color: red;
+    //     }
+
+    //     &:after {
+    //         content: "";
+    //         position: absolute;
+    //         top: 0;
+    //         left: 50%;
+    //         transform: translateX(-50%);
+    //         height: 1px;
+    //         background-color: green;
+    //         width: 100%;
+    //     }
+    // }
 
     // &__name {
     //     width: 100%;
@@ -327,13 +365,12 @@ img {
 .treeName {
     margin: 0 auto;
     text-align: center;
-    max-width: 50ch;
     font-weight: 900;
     font-size: 1.25rem;
     padding: 48px;
 
     a {
-        display: block;
+        margin: 0 8px;
     }
 }
 
@@ -343,6 +380,39 @@ img {
 }
 
 .branch {
+    position: relative;
+
+    // .profileLeaf__connection {
+    //     pointer-events: none;
+    // }
+
+    // .descendants .branch {
+    //     &:first-child .profileLeaf {
+    //         .profileLeaf__connection {
+    //             &:after {
+    //                 left: 100%;
+    //             }
+    //         }
+
+    //         // &:only-child {
+    //         //     .profileLeaf__connection {
+    //         //         &:after {
+    //         //             left: 100%;
+    //         //         }
+    //         //     }
+    //         // }
+    //     }
+
+    //     &:last-child {
+    //         .profileLeaf__connection {
+    //             &:after {
+    //                 left: unset;
+    //                 right: 0;
+    //             }
+    //         }
+    //     }
+    // }
+
     // > .directMembers {
     //     > .profile_leaf {
     //         z-index: 2;
@@ -535,7 +605,7 @@ nav {
     }
 
     &__name {
-        font-size: 18px;
+        // font-size: 18px;
     }
 
     &__close,
@@ -608,6 +678,7 @@ nav {
     &__item {
         height: 3rem;
         margin-bottom: 8px;
+        font-size: .875em;
     }
 
     &.show {
